--- a/250521/index.html
+++ b/250521/index.html
@@ -119,13 +119,13 @@
      
         <div class="col-5">
             <div class="owl-carousel owl-theme">
-                <div> <img src="res/res5.jpg" alt=""></div>
-                <div> <img src="res/res6.jpg" alt=""> </div>
-                <div> <img src="res/res7.jpg" alt=""> </div>
-                <div><img src="res/res8.jpg" alt=""> </div>
-                <div> <img src="res/res9.jpg" alt=""> </div>
-                <div> <img src="res/res1.png"> </div>
-                <div>  <img src="res/res12.jpg" alt="">  </div>
+                <div> <img src="res/res7.jpg" alt="resim7"></div>
+                <div> <img src="res/res10.jpg" alt="resim10"></div>
+                <div> <img src="res/res13.jpg" alt="resim13"></div>
+                <div><img src="res/res8.jpg" alt="resim8"></div>
+                <div> <img src="res/res5.jpg" alt="resim5"></div>
+                <div> <img src="res/res6.jpg" alt="resim6"></div>
+                <div>  <img src="res/res9.jpg" alt="resim9"></div>
               </div>
         </div>
     </div>
@@ -156,6 +156,27 @@
   $('.owl-carousel').owlCarousel();
   
 });
+
+   </script>
+
+   <script>
+    $('.owl-carousel').owlCarousel({
+    loop:true,
+    margin:10,
+    nav:true,
+    responsive:{
+        0:{
+            items:1
+        },
+        600:{
+            items:3
+        },
+        1000:{
+            items:5
+        }
+    }
+})
+html
    </script>
    
    
